# zprize-mobile-msm

./: Cargo.toml  README.md
.cargo/: config.toml
bench-templates/: Cargo.toml
bls12_377/: Cargo.toml
bls12_377/src/fields/: fq2.rs  fq6.rs
ec/: Cargo.toml
ec/src/models/short_weierstrass/: serialization_flags.rs
ff/: Cargo.toml
ff-asm/: Cargo.toml
ff-macros/: Cargo.toml
poly/: Cargo.toml
poly-benches/: Cargo.toml
serialize/: Cargo.toml
test-curves/: Cargo.toml
test-templates/: Cargo.toml
zprize-mobile-harness/: .gitmodules  Cargo.toml
zprize-mobile-harness/src/: lib.rs  main.rs
