[package]
name = "celo-zprize"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-377 = { version = "^0.3.0", path = "../bls12_377", default-features = false }
ark-ec = { version = "^0.3.0", path = "../ec", features = ["parallel"] }
ark-ff = { version = "^0.3.0", path = "../ff", features = ["parallel"] }
ark-poly = { version = "^0.3.0", path = "../poly", default-features = false }
ark-serialize = { version = "^0.3.0", path = "../serialize", default-features = false }
ark-std = { version = "^0.3.0", path = "../std", default-features = false }
duration-string = "0.3.0"
rand = "0.8.0"
rand_chacha = "0.3.1"
thiserror = "1.0.15"

[lib]
crate-type = ["rlib", "dylib"]

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }
